# Rikka-Engine

./: BasicWindow.c  CMakeLists.txt  README.md
demos/: BasicWindow.c  Rect.c  rikka_core.h  rikka_datatypes.h  triangle.c
src/: rikka_core.h  rikka_datatypes.h  rikka_datetypes.h
src/rikka_core/: core.c  renderer.c  renderer_shaders.c  shaders.c
